--- a/package.json
+++ b/package.json
@@ -1,76 +1,77 @@
 {
-  "name": "aluracar",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/camera": "^5.20.0",
-    "@ionic-native/core": "4.3.2",
-    "@ionic-native/date-picker": "^5.20.0",
-    "@ionic-native/globalization": "^4.20.0",
-    "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "4.3.2",
-    "@ionic-native/vibration": "^5.20.0",
-    "@ionic/storage": "2.0.1",
-    "@ngx-translate/core": "^8.0.0",
-    "@ngx-translate/http-loader": "^3.0.1",
-    "cordova-android": "^6.4.0",
-    "cordova-ios": "^4.4.0",
-    "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-datepicker": "^0.9.3",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-vibration": "^2.1.6",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "onesignal-cordova-plugin": "^2.2.5",
-    "rxjs": "5.4.3",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
-  },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-vibration": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-datepicker": {},
-      "cordova-plugin-camera": {
-        "CAMERA_USAGE_DESCRIPTION": " ",
-        "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
-      },
-      "cordova-plugin-globalization": {}
+    "name": "aluracar",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": [
-      "android",
-      "ios"
-    ]
-  }
+    "dependencies": {
+        "@angular/common": "4.4.4",
+        "@angular/compiler": "4.4.4",
+        "@angular/compiler-cli": "4.4.4",
+        "@angular/core": "4.4.4",
+        "@angular/forms": "4.4.4",
+        "@angular/http": "4.4.4",
+        "@angular/platform-browser": "4.4.4",
+        "@angular/platform-browser-dynamic": "4.4.4",
+        "@ionic-native/camera": "^5.20.0",
+        "@ionic-native/core": "4.3.2",
+        "@ionic-native/date-picker": "^5.20.0",
+        "@ionic-native/globalization": "^4.20.0",
+        "@ionic-native/splash-screen": "4.3.2",
+        "@ionic-native/status-bar": "4.3.2",
+        "@ionic-native/vibration": "^5.20.0",
+        "@ionic/storage": "2.0.1",
+        "@ngx-translate/core": "^8.0.0",
+        "@ngx-translate/http-loader": "^3.0.1",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
+        "cordova-plugin-datepicker": "^0.9.3",
+        "cordova-plugin-device": "^1.1.7",
+        "cordova-plugin-ionic-webview": "^1.2.1",
+        "cordova-plugin-splashscreen": "^4.1.0",
+        "cordova-plugin-vibration": "^2.1.6",
+        "cordova-plugin-whitelist": "^1.3.4",
+        "ionic-angular": "3.8.0",
+        "ionic-plugin-keyboard": "^2.2.1",
+        "ionicons": "3.0.0",
+        "onesignal-cordova-plugin": "^2.2.5",
+        "rxjs": "5.4.3",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.18",
+        "cordova-plugin-globalization": "~1.11.0"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "3.0.1",
+        "typescript": "2.3.4"
+    },
+    "description": "An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-webview": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-datepicker": {},
+            "cordova-plugin-camera": {
+                "CAMERA_USAGE_DESCRIPTION": " ",
+                "PHOTOLIBRARY_USAGE_DESCRIPTION": " "
+            },
+            "cordova-plugin-globalization": {}
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
+    }
 }
