--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "@angular/http": "4.4.4",
         "@angular/platform-browser": "4.4.4",
         "@angular/platform-browser-dynamic": "4.4.4",
-        "@ionic-native/camera": "^5.20.0",
+        "@ionic-native/camera": "^5.21.5",
         "@ionic-native/core": "4.3.2",
         "@ionic-native/date-picker": "^5.20.0",
         "@ionic-native/globalization": "^4.20.0",
@@ -36,6 +36,7 @@
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-datepicker": "^0.9.3",
         "cordova-plugin-device": "^1.1.7",
+        "cordova-plugin-globalization": "~1.11.0",
         "cordova-plugin-ionic-webview": "^1.2.1",
         "cordova-plugin-splashscreen": "^4.1.0",
         "cordova-plugin-vibration": "^2.1.6",
@@ -46,8 +47,7 @@
         "onesignal-cordova-plugin": "^2.2.5",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18",
-        "cordova-plugin-globalization": "~1.11.0"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.1",
